crates/gql_codegen_cli/tests/snapshots/snapshots__schema_types_only.snap
---
source: crates/gql_codegen_cli/tests/snapshots.rs
expression: content
---
export interface CreateUserInput {
  readonly __typename?: 'CreateUserInput';
  readonly name: string;
  readonly email?: string | null;
  readonly age?: number | null;
  readonly role?: Role | null;
}

export type DateTime = unknown;

export interface Mutation {
  readonly __typename?: 'Mutation';
  readonly createUser: User;
  readonly updateUser?: User | null;
  readonly deleteUser: boolean;
}

export interface Post {
  readonly __typename?: 'Post';
  readonly id: string;
  readonly title: string;
  readonly body: string;
  readonly published: boolean;
  readonly author: User;
  readonly tags: ReadonlyArray<string>;
}

export interface Query {
  readonly __typename?: 'Query';
  readonly user?: User | null;
  readonly users: ReadonlyArray<User>;
  readonly post?: Post | null;
}

export enum Role {
  ADMIN = 'ADMIN',
  USER = 'USER',
  GUEST = 'GUEST',
}

export interface UpdateUserInput {
  readonly __typename?: 'UpdateUserInput';
  readonly name?: string | null;
  readonly email?: string | null;
  readonly age?: number | null;
  readonly role?: Role | null;
}

export interface User {
  readonly __typename?: 'User';
  readonly id: string;
  readonly name: string;
  readonly email?: string | null;
  readonly age?: number | null;
  readonly role: Role;
  readonly posts: ReadonlyArray<Post>;
  readonly createdAt: unknown;
}

export interface UserFilter {
  readonly __typename?: 'UserFilter';
  readonly role?: Role | null;
  readonly minAge?: number | null;
  readonly maxAge?: number | null;
}
