crates/gql_codegen_cli/tests/snapshots/snapshots__types_ts.snap
---
source: crates/gql_codegen_cli/tests/snapshots.rs
expression: types
---
export interface CreateUserInput {
  readonly __typename?: 'CreateUserInput';
  readonly name: string;
  readonly email?: string | null;
  readonly age?: number | null;
  readonly role?: Role | null;
}

export type DateTime = unknown;

export interface Mutation {
  readonly __typename?: 'Mutation';
  readonly createUser: User;
  readonly updateUser?: User | null;
  readonly deleteUser: boolean;
}

export interface Post {
  readonly __typename?: 'Post';
  readonly id: string;
  readonly title: string;
  readonly body: string;
  readonly published: boolean;
  readonly author: User;
  readonly tags: ReadonlyArray<string>;
}

export interface Query {
  readonly __typename?: 'Query';
  readonly user?: User | null;
  readonly users: ReadonlyArray<User>;
  readonly post?: Post | null;
}

export enum Role {
  ADMIN = 'ADMIN',
  USER = 'USER',
  GUEST = 'GUEST',
}

export interface UpdateUserInput {
  readonly __typename?: 'UpdateUserInput';
  readonly name?: string | null;
  readonly email?: string | null;
  readonly age?: number | null;
  readonly role?: Role | null;
}

export interface User {
  readonly __typename?: 'User';
  readonly id: string;
  readonly name: string;
  readonly email?: string | null;
  readonly age?: number | null;
  readonly role: Role;
  readonly posts: ReadonlyArray<Post>;
  readonly createdAt: unknown;
}

export interface UserFilter {
  readonly __typename?: 'UserFilter';
  readonly role?: Role | null;
  readonly minAge?: number | null;
  readonly maxAge?: number | null;
}

export interface CreateUser {
  readonly createUser:  {
    readonly id: string;
    readonly name: string;
    readonly email?: string | null;
    readonly age?: number | null;
    readonly role: Role;
    readonly createdAt: DateTime;
  };
}

export interface CreateUserVariables {
  readonly input: CreateUserInput;
}

export interface DeleteUser {
  readonly deleteUser: boolean;
}

export interface DeleteUserVariables {
  readonly id: string;
}

export interface GetPost {
  readonly post?:  {
    readonly id: string;
    readonly title: string;
    readonly body: string;
    readonly published: boolean;
    readonly author:  {
      readonly id: string;
      readonly name: string;
    };
    readonly tags: Array<string>;
  };
}

export interface GetPostVariables {
  readonly id: string;
}

export interface GetUser {
  readonly user?:  {
    readonly id: string;
    readonly name: string;
    readonly email?: string | null;
    readonly age?: number | null;
    readonly role: Role;
    readonly createdAt: DateTime;
    readonly posts: Array< {
      readonly id: string;
      readonly title: string;
    }>;
  };
}

export interface GetUserVariables {
  readonly id: string;
}

export interface GetUsers {
  readonly users: Array< {
    readonly id: string;
    readonly name: string;
    readonly email?: string | null;
    readonly age?: number | null;
    readonly role: Role;
    readonly createdAt: DateTime;
  }>;
}

export interface GetUsersVariables {
  readonly filter?: UserFilter | null;
}

export interface PostFields {
  readonly id: string;
  readonly title: string;
  readonly body: string;
  readonly published: boolean;
  readonly tags: Array<string>;
}

export interface UpdateUser {
  readonly updateUser?:  {
    readonly id: string;
    readonly name: string;
    readonly email?: string | null;
    readonly age?: number | null;
    readonly role: Role;
    readonly createdAt: DateTime;
  };
}

export interface UpdateUserVariables {
  readonly id: string;
  readonly input: UpdateUserInput;
}

export interface UserFields {
  readonly id: string;
  readonly name: string;
  readonly email?: string | null;
  readonly age?: number | null;
  readonly role: Role;
  readonly createdAt: DateTime;
}
